# artifacts

./: CMakeLists.txt  get_paths.py
.github/workflows/: windows_python.yml
